# msys-opt

./: .zenodo.json  README.md  mkdocs.yml  requirements.txt  setup.cfg
src/msys_opt/core/: __init__.py  generator.py  type.py
src/msys_opt/modules/: math.py  sql.py
src/msys_opt/types/: vector.py
tests/core/: test_np_parser.py  test_types.py
tests/core/connection/: test_input.py  test_types.py
tests/modules/: __init__.py  test_math.py  test_processor.py
tests/types/: __init__.py
