[metadata]
name = MSYS-Optimisation
version = attr: msys_opt.__version__
url = https://github.com/willi-z/mdd
project_urls =
    Source Code = https://github.com/willi-z/msys-opt
    Issue Tracker = https://github.com/willi-z/msys-opt/issues/

license = BSD-3-Clause
author = WILLI Zschiebsch


[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
# console_scripts =
#     msys_opt = msys_opt.cli:main
msys.modules =
    math = msys_opt.modules.math:Math
    sql = msys_opt.modules.sql:SQL
msys.types =
    vector = msys_opt.types.vector:VectorType

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    msys-opt
    tests

[coverage:paths]
source =
    src